# PancrePal-xiaoyibao

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  2026架构.drawio  Dockerfile  Makefile  README for BCbot.md  README-AI_Gateway.md  README-En.md  README.md  config.json  dify.json  docker-compose.yaml  docker-compose.yml  env.example  fastgpt-deployment.md  main.py  openapi.json  patient_support_matrix.drawio  pyproject.toml  requirements.txt  roadmap.md  小胰宝-病友宝典.md  小胰宝套装二维码.md  小胰宝推荐新手宝典  小胰宝推荐新手宝典.md  数据星云.drawio  需要开源社区大佬们助力的任务清单.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker.yml  go.yml
AI Platform Deploy/Cozy/: readme.md
AI Platform Deploy/腾讯元宝/: 提示词.md
agent/: __init__.py  agent_template.py  base.py  coze.py  dify.py  fastgpt.py  loader.py  models.py  registry.py  zhipu.py
api/: agents.py  api_keys.py  auth.py  chat.py  mcp.py  upload.py
auth/: dependencies.py
database/: connection.py
docker/: README.md
docker/auto-deploy/: LICENSE  Makefile  deploy.json  go.mod  go.sum  main.go
docker/auto-deploy/tmpl/: api.tmpl  gpt.tmpl  ngx.tmpl
docker/cow-pancrepal/: Minimax-t2apro.py
docker/cow-pancrepal/channel/wechat/: test-vocal.py  wechat_channel.py.base  wechat_channel1.py
docker/cow-pancrepal/plugins/: config.json  plugins.json
docker/cow-pancrepal/plugins/keyword/: config.json
docker/cow-qywx/: config-template.json  config.json  nohup.out  user_datas.pkl  xiaoyibao企业微信魔改说明.md
docker/cow-qywx/bot/: session_manager.py
docker/cow-qywx/bot/chatgpt/: revised_chat_gpt_bot.py
docker/cow-qywx/channel/: chat_channel.py
docker/cow-qywx/plugins/: plugins.json
docker/fastgpt-pancrepal/: config.json  docker-compose.yaml  fastgpt-api-stream-test.py  readme.md
docker/oneapi-pancrepal/: docker-compose.yml
docs/: agents_api.md  api_keys.md  companion.md  coze_api.md  dify_api.md  fastgpt_api.md  response-format.md  加入项目前必读.md  用户认证系统说明.md
docs/AI Platform Deploy/腾讯元宝/: readme_cn.md
hardware/3d_shell/: 3DShell_3DShell_PCB_3636_B.stl  3DShell_3DShell_PCB_3636_T.stl
hardware/pcb/c3_8311_3636/: PCB_3636_v3.pcbdoc
hardware/pcb/c3_8311_3636/SCH_3636_v3/: 1_P1.schdoc
hardware/server/docker/: Dockerfile-server  Dockerfile-web  docker-build.md  docker-compose.yml  nginx.conf  start.sh  部署说明.md
hardware/server/main/manager-api/: README.md  pom.xml
hardware/server/main/manager-web/: .env  .env.development  .env.production  README.md  babel.config.js  package-lock.json  package.json  vue.config.js
hardware/server/main/manager-web/public/: index.html  offline.html
hardware/server/main/manager-web/src/: App.vue  main.js  registerServiceWorker.js  service-worker.js
hardware/server/main/xiaozhi-server/: agent-base-prompt.txt  app.py  config.yaml  config_from_api.yaml  docker-compose.yml  mcp_server_settings.json  performance_tester.py  requirements.txt
hardware/server/main/xiaozhi-server/config/: config_loader.py  logger.py  manage_api_client.py  settings.py
hardware/server/main/xiaozhi-server/core/: auth.py  connection.py  (+2 more)
models/: user.py
scripts/: create_admin.py  quick_start.sh
services/: api_key_service.py  user_service.py
src/: README.md  fastgpt-mongo-mitigation-v2.sh  fastgpt-mongo-mitigation.sh
src/auto-deploy/: LICENSE  Makefile  deploy.json  go.mod  go.sum  main.go
src/cow-pancrepal/: app.py  config.json  user_datas.pkl  web_ui.py  腾讯云部署py38环境.md
src/cow-pancrepal/channel/wechat/: wechat_channel.py
src/cow-pancrepal/plugins/: .gitignore  config.bak
src/cow-pancrepal/voice/ali/: ali_api.py
src/cow-qywx/: config.json
src/cow-qywx/bot/chatgpt/: revised_chat_gpt_bot.py
src/wxkf-api/: .gitignore  Dockerfile  README.md  agents.yml  agents.yml.template  build-docker.sh  package.json  secret.yml.template  shutdown-docker.sh  startup-docker.sh
src/wxkf-api/configs/dev/: service.yml
src/wxkf-api/public/: welcome.html
src/wxkf-api/src/: index.ts
src/wxkf-api/src/lib/: agents.ts  initialize.ts  qingyan-glms-api.ts  qingyan-glms-free-api.ts  secret.ts  util.ts  wxkf-api.ts
test/: test_agents_api.py  test_api_keys.py  test_auth_system.py  test_comprehensive_fastgpt.py  test_coze_agent.py  test_coze_token.py  test_enhanced_coze_agent.py  test_fastgpt_detail.py  test_fastgpt_file_upload.py  test_file_upload.py
(+514 files in other folders)
